// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Date Block renders correctly 1`] = `
<time
  class="ecl-date-block"
  datetime="2019-09-26"
>
  <span
    class="ecl-u-sr-only"
  >
    2019-09-26
  </span>
  <span
    aria-hidden="true"
    class="ecl-date-block__day"
  >
    26
  </span>
  <abbr
    aria-hidden="true"
    class="ecl-date-block__month"
    title="September"
  >
    Sep
  </abbr>
  <span
    aria-hidden="true"
    class="ecl-date-block__year"
  >
    2019
  </span>
</time>
`;

exports[`EC - Date Block renders correctly with extra attributes 1`] = `
<time
  class="ecl-date-block"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  datetime="2019-09-26"
>
  <span
    class="ecl-u-sr-only"
  >
    2019-09-26
  </span>
  <span
    aria-hidden="true"
    class="ecl-date-block__day"
  >
    26
  </span>
  <abbr
    aria-hidden="true"
    class="ecl-date-block__month"
    title="September"
  >
    Sep
  </abbr>
  <span
    aria-hidden="true"
    class="ecl-date-block__year"
  >
    2019
  </span>
</time>
`;

exports[`EC - Date Block renders correctly with extra attributes and time set 1`] = `
<time
  class="ecl-date-block"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  datetime="15:30"
>
  <span
    class="ecl-u-sr-only"
  >
    15:30
  </span>
  <span
    aria-hidden="true"
    class="ecl-date-block__day"
  >
    26
  </span>
  <abbr
    aria-hidden="true"
    class="ecl-date-block__month"
    title="September"
  >
    Sep
  </abbr>
  <span
    aria-hidden="true"
    class="ecl-date-block__year"
  >
    2019
  </span>
</time>
`;

exports[`EC - Date Block renders correctly with extra class names 1`] = `
<time
  class="ecl-date-block custom-class custom-class--test"
  datetime="2019-09-26"
>
  <span
    class="ecl-u-sr-only"
  >
    2019-09-26
  </span>
  <span
    aria-hidden="true"
    class="ecl-date-block__day"
  >
    26
  </span>
  <abbr
    aria-hidden="true"
    class="ecl-date-block__month"
    title="September"
  >
    Sep
  </abbr>
  <span
    aria-hidden="true"
    class="ecl-date-block__year"
  >
    2019
  </span>
</time>
`;

exports[`EC - Date Block renders correctly with time set 1`] = `
<time
  class="ecl-date-block"
  datetime="15:30"
>
  <span
    class="ecl-u-sr-only"
  >
    15:30
  </span>
  <span
    aria-hidden="true"
    class="ecl-date-block__day"
  >
    26
  </span>
  <abbr
    aria-hidden="true"
    class="ecl-date-block__month"
    title="September"
  >
    Sep
  </abbr>
  <span
    aria-hidden="true"
    class="ecl-date-block__year"
  >
    2019
  </span>
</time>
`;

exports[`EC - Date Block with validation enabled and missing input data returns the right warning message 1`] = `<!-- ecl2-compliance: date-block -->`;
